Fix version resolver
Signed-off-by: Tavi <tavi@divested.dev>